tests/parsing/smtlib/v2.6/errors/051_check-sat-assuming_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/051_check-sat-assuming_unclosed_1.smt2", line 2, character 23-24:
2 | (check-sat-assuming () _)
                           ^
Error while parsing a check-sat-assuming command, read the reserved word '_',
      but expected a closing parenthesis.
